log
Tue 02 May 2023 10:29:59 PM UTC: 
 tests:  0|5
total_score: 0/70
e50dcda
Tue 02 May 2023 10:33:49 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  0|5
total_score: 0/70
e93bc0c
Tue 02 May 2023 10:36:18 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:71:15: error: comparison between pointer and integer [-Werror]
   71 |     for (i=0;i<n;i++)
      |               ^
cc1: all warnings being treated as errors
Compilation failed
b05c4ce
Tue 02 May 2023 10:41:08 PM UTC: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
5dcae9c
Tue 02 May 2023 10:48:41 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:79:15: error: unused variable ‘nodo’ [-Werror=unused-variable]
   79 |         Node* nodo=copy(n);
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
96de336
Tue 02 May 2023 10:50:12 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
40dec30
